ajuste de links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <footer>
-        Feito com ♥ pela <a href="http:/rocketseat.com.br" target="_blank">Rocketseat</a>
+        Feito com ♥ por <a href=https://www.instagram.com/_gabrielsena/ target="_blank">Gabriel Sena</a>
       </footer>
 
     </div>
