correção bara de rolamento e links

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <ul>
         <li><a href="http://agenda-de-banhotosa.infinityfreeapp.com/MeuProjetoMVC/View/add-dono.php" target="_blank">Agenda de Banho e Tosa</a></li>
         <li><a href="https://app.rocketseat.com.br/discover" target="_blank">Conheça o Discover</a></li>
-        <li><a href="#">Ver meu Portfólio</a></li>
-        <li><a href="#">Baixar meu e-book</a></li>
+        <!-- <li><a href="#">Ver meu Portfólio (ficticio)</a></li>
+        <li><a href="#">Baixar meu e-book (ficticio)</a></li> -->
       </ul>
 
       <div id="social-links">
