correção de links

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="https://github.com/Gabriel-Sena" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
         <a href="https://www.instagram.com/_gabrielsena/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
         <a href="https://www.linkedin.com/in/gabriel-sena-jesus/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-        <a href="https://twitter.com/pelemonstro" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
+        <a href="#" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
       </div>
 
       <footer>
